--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,10 @@ os:
 script:
   - echo "test"
   - make test
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+before_install:
+  - go get -t -v ./...
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
